FIX: ensures scroller is not overflowing

--- a/assets/stylesheets/common/discourse-calendar.scss
+++ b/assets/stylesheets/common/discourse-calendar.scss
@@ -32,6 +32,10 @@
       }
     }
 
+    .fc-scroller {
+      max-height: 565px;
+    }
+
     .fc-basic-view .fc-day-top .fc-day-number {
       float: left;
     }
